fixed li for menuTab on mobiles and bottom scroll on mobiles

--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -9,6 +9,8 @@
  */
 
 .totebay {
+  overflow: hidden;
+  
   // Helpers
   .d-b {
     display: block;
@@ -67,6 +69,9 @@
         float: none;
         display: inline-block;
         margin-left: 0;
+        @media all and (max-width: 480px) {
+          width: 100%;
+        }
       }
     }
   }
